--- a/index.html
+++ b/index.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preload" href="css/normailze.css" />
-    <link rel="preload" href="css/style.css" />
     <link rel="stylesheet" href="css/normailze.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display&display=swap"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preload" href="css/style.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>Blog de Café</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="contenedor">
+        <div class="barra">
+          <a href="index.html" class="logo">
+            <h1 class="no-margin centrar-texto">
+              Blog<span class="logo__bold">DeCafé</span>
+            </h1>
+          </a>
+
+          <nav class="navegacion">
+            <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+            <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+            <a href="contacto.html" class="navegacion__enlace">Contacto</a>
+          </nav>
+        </div>
+      </div>
+
+      <div class="header__texto">
+        <h2 class="no-margin">Blog de Café con Consejos y Cursos</h2>
+        <p class="no-margin">
+          Aprende de los expertos con los mejores tips para hacer el mejor café.
+        </p>
+      </div>
+    </header>
+  </body>
 </html>
