--- a/index.html
+++ b/index.html
@@ -41,5 +41,78 @@
         </p>
       </div>
     </header>
+
+    <div class="contenedor contenido-principal">
+      <main class="blog">
+        <h3>Nustro Blog</h3>
+
+        <article class="entrada">
+          <div class="entrada__imagen">
+            <img src="img/blog1.jpg" alt="Entrada 1" />
+          </div>
+          <div class="entrada__contenido">
+            <h4 class="no-margin">
+              Tipos de granos de café y sus características
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              voluptatum, quibusdam, quia, quos voluptates voluptate
+              exercitationem quod quas voluptatibus quidem doloribus
+              consequuntur. Quisquam voluptatum, quibusdam, quia, quos
+              voluptates voluptate exercitationem quod quas voluptatibus quidem
+              doloribus consequuntur.
+            </p>
+            <a href="entrada.html" class="boton boton--primario"
+              >Leer Entrada</a
+            >
+          </div>
+        </article>
+
+        <article class="entrada">
+          <div class="entrada__imagen">
+            <img src="img/blog2.jpg" alt="Entrada 1" />
+          </div>
+          <div class="entrada__contenido">
+            <h4 class="no-margin">
+              Tres formas de preparar café en casa sin una cafetera
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              voluptatum, quibusdam, quia, quos voluptates voluptate
+              exercitationem quod quas voluptatibus quidem doloribus
+              consequuntur. Quisquam voluptatum, quibusdam, quia, quos
+              voluptates voluptate exercitationem quod quas voluptatibus quidem
+              doloribus consequuntur.
+            </p>
+            <a href="entrada.html" class="boton boton--primario"
+              >Leer Entrada</a
+            >
+          </div>
+        </article>
+
+        <article class="entrada">
+          <div class="entrada__imagen">
+            <img src="img/blog3.jpg" alt="Entrada 1" />
+          </div>
+          <div class="entrada__contenido">
+            <h4 class="no-margin">Beneficios de tomar café para tu salud</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              voluptatum, quibusdam, quia, quos voluptates voluptate
+              exercitationem quod quas voluptatibus quidem doloribus
+              consequuntur. Quisquam voluptatum, quibusdam, quia, quos
+              voluptates voluptate exercitationem quod quas voluptatibus quidem
+              doloribus consequuntur.
+            </p>
+            <a href="entrada.html" class="boton boton--primario"
+              >Leer Entrada</a
+            >
+          </div>
+        </article>
+      </main>
+      <aside class="sidebar">
+        <h3>Nuestros Cursos y talleres</h3>
+      </aside>
+    </div>
   </body>
 </html>
