--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <article class="entrada">
           <div class="entrada__imagen">
-            <img src="img/blog1.jpg" alt="Entrada 1" />
+            <img loading="lazy" src="img/blog1.jpg" alt="Entrada 1" />
           </div>
           <div class="entrada__contenido">
             <h4 class="no-margin">
@@ -70,7 +70,7 @@
 
         <article class="entrada">
           <div class="entrada__imagen">
-            <img src="img/blog2.jpg" alt="Entrada 1" />
+            <img loading="lazy" src="img/blog2.jpg" alt="Entrada 1" />
           </div>
           <div class="entrada__contenido">
             <h4 class="no-margin">
@@ -92,7 +92,7 @@
 
         <article class="entrada">
           <div class="entrada__imagen">
-            <img src="img/blog3.jpg" alt="Entrada 1" />
+            <img loading="lazy" src="img/blog3.jpg" alt="Entrada 1" />
           </div>
           <div class="entrada__contenido">
             <h4 class="no-margin">Beneficios de tomar café para tu salud</h4>
