--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preload" href="css/normailze.css" />
+    <link rel="preload" href="css/normailze.css" as="style" />
     <link rel="stylesheet" href="css/normailze.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
+      as="font"
+      crossorigin="crossorigin"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preload" href="css/style.css" />
+    <link rel="preload" href="css/style.css" as="style" />
     <link rel="stylesheet" href="css/styles.css" />
+
+    <!-- Prefetch -->
+    <link rel="prefetch" href="nosotros.html" as="document" />
+    <!-- Con google analytics podemos saber que página los usuarios visitan más y esta es la que se pone en prefetch -->
 
     <title>Blog de Café</title>
   </head>
@@ -48,7 +58,11 @@
 
         <article class="entrada">
           <div class="entrada__imagen">
-            <img loading="lazy" src="img/blog1.jpg" alt="Entrada 1" />
+            <picture>
+              <source srcset="img/blog1.webp" type="image/webp" />
+              <source srcset="img/blog1.jpg" type="image/jpeg" />
+              <img loading="lazy" src="img/blog1.jpg" alt="Entrada 1" />
+            </picture>
           </div>
           <div class="entrada__contenido">
             <h4 class="no-margin">
@@ -70,7 +84,11 @@
 
         <article class="entrada">
           <div class="entrada__imagen">
-            <img loading="lazy" src="img/blog2.jpg" alt="Entrada 1" />
+            <picture>
+              <source srcset="img/blog2.webp" type="image/webp" />
+              <source srcset="img/blog2.jpg" type="image/jpeg" />
+              <img loading="lazy" src="img/blog2.jpg" alt="Entrada 1" />
+            </picture>
           </div>
           <div class="entrada__contenido">
             <h4 class="no-margin">
@@ -92,7 +110,11 @@
 
         <article class="entrada">
           <div class="entrada__imagen">
-            <img loading="lazy" src="img/blog3.jpg" alt="Entrada 1" />
+            <picture>
+              <source srcset="img/blog3.webp" type="image/webp" />
+              <source srcset="img/blog3.jpg" type="image/jpeg" />
+              <img loading="lazy" src="img/blog3.jpg" alt="Entrada 1" />
+            </picture>
           </div>
           <div class="entrada__contenido">
             <h4 class="no-margin">Beneficios de tomar café para tu salud</h4>
@@ -158,8 +180,7 @@
           </nav>
         </div>
       </div>
-
-   
-    </>
+    </footer>
+    <script src="js/modernizr.js"></script>
   </body>
 </html>
