--- a/cursos.html
+++ b/cursos.html
@@ -48,7 +48,11 @@
       <div class="curso">
         <!--.curso-->
         <div class="curso__img">
-          <img src="img/curso1.jpg" alt="Curso 1" />
+          <picture>
+            <source srcset="img/curso1.webp" type="image/webp" />
+            <source srcset="img/curso1.jpg" type="image/jpeg" />
+            <img src="img/curso1.jpg" alt="Curso 1" />
+          </picture>
         </div>
 
         <div class="curso__info">
@@ -73,7 +77,10 @@
       <div class="curso">
         <!--.curso-->
         <div class="curso__img">
-          <img src="img/curso2.jpg" alt="Curso 1" />
+          <picture>
+            <source srcset="img/curso2.webp" type="image/webp" />
+            <img src="img/curso2.jpg" alt="Curso 1" />
+          </picture>
         </div>
 
         <div class="curso__info">
