--- a/entrada.html
+++ b/entrada.html
@@ -48,7 +48,10 @@
 
         <div class="entrada">
           <div class="entrada__imagen">
-            <img src="img/blog1.jpg" alt="Entrada 1" />
+            <picture>
+              <source srcset="img/blog1.webp" type="image/webp" />
+              <img src="img/blog1.jpg" alt="Entrada 1" />
+            </picture>
           </div>
           <div class="entrada__contenido">
             <h4 class="no-margin">
