--- a/cursos.html
+++ b/cursos.html
@@ -49,8 +49,7 @@
         <!--.curso-->
         <div class="curso__img">
           <picture>
-            <source srcset="img/curso1.webp" type="image/webp" />
-            <source srcset="img/curso1.jpg" type="image/jpeg" />
+            <source srcset="img/curso1.webp" type="img/webp" />
             <img src="img/curso1.jpg" alt="Curso 1" />
           </picture>
         </div>
@@ -78,7 +77,7 @@
         <!--.curso-->
         <div class="curso__img">
           <picture>
-            <source srcset="img/curso2.webp" type="image/webp" />
+            <source srcset="img/curso2.webp" type="img/webp" />
             <img src="img/curso2.jpg" alt="Curso 1" />
           </picture>
         </div>
@@ -105,7 +104,10 @@
       <div class="curso">
         <!--.curso-->
         <div class="curso__img">
-          <img src="img/curso3.jpg" alt="Curso 1" />
+          <picture>
+            <source srcset="img/curso3.webp" type="img/webp" />
+            <img src="img/curso3.jpg" alt="Curso 1" />
+          </picture>
         </div>
 
         <div class="curso__info">
