--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="entrada__imagen">
             <picture>
               <source srcset="img/blog1.webp" type="image/webp" />
-              <img loading="lazy" src="img/blog1.jpg" alt="Entrada 1" />
+              <img src="img/blog1.jpg" alt="Entrada 1" />
             </picture>
           </div>
           <div class="entrada__contenido">
@@ -85,7 +85,7 @@
           <div class="entrada__imagen">
             <picture>
               <source srcset="img/blog2.webp" type="image/webp" />
-              <img loading="lazy" src="img/blog2.jpg" alt="Entrada 1" />
+              <img src="img/blog2.jpg" alt="Entrada 1" />
             </picture>
           </div>
           <div class="entrada__contenido">
@@ -110,7 +110,7 @@
           <div class="entrada__imagen">
             <picture>
               <source srcset="img/blog3.webp" type="image/webp" />
-              <img loading="lazy" src="img/blog3.jpg" alt="Entrada 1" />
+              <img src="img/blog3.jpg" alt="Entrada 1" />
             </picture>
           </div>
           <div class="entrada__contenido">
