--- a/cursos.html
+++ b/cursos.html
@@ -49,8 +49,18 @@
         <!--.curso-->
         <div class="curso__img">
           <picture>
-            <source srcset="img/curso1.webp" type="img/webp" />
-            <img src="img/curso1.jpg" alt="Curso 1" />
+            <source
+              srcset="img/curso1.webp"
+              type="img/webp"
+              width="auto"
+              height="auto"
+            />
+            <img
+              src="img/curso1.jpg"
+              alt="Curso 1"
+              width="auto"
+              height="auto"
+            />
           </picture>
         </div>
 
@@ -77,8 +87,18 @@
         <!--.curso-->
         <div class="curso__img">
           <picture>
-            <source srcset="img/curso2.webp" type="img/webp" />
-            <img src="img/curso2.jpg" alt="Curso 1" />
+            <source
+              srcset="img/curso2.webp"
+              type="img/webp"
+              width="auto"
+              height="auto"
+            />
+            <img
+              src="img/curso2.jpg"
+              alt="Curso 1"
+              width="auto"
+              height="auto"
+            />
           </picture>
         </div>
 
