--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <article class="entrada">
           <div class="entrada__imagen">
             <picture>
-              <source srcset="img/blog1.webp" type="image/webp" />
-              <img src="img/blog1.jpg" alt="Entrada 1" />
+              <source srcset="img/blog1.webp" type="image/webp" width="auto" height="auto" />
+              <img src="img/blog1.jpg" alt="Entrada 1" width="auto" height="auto" />
             </picture>
           </div>
           <div class="entrada__contenido">
@@ -84,8 +84,8 @@
         <article class="entrada">
           <div class="entrada__imagen">
             <picture>
-              <source srcset="img/blog2.webp" type="image/webp" />
-              <img src="img/blog2.jpg" alt="Entrada 1" />
+              <source srcset="img/blog2.webp" type="image/webp" width="auto" height="auto" />
+              <img src="img/blog2.jpg" alt="Entrada 1" width="auto" height="auto" />
             </picture>
           </div>
           <div class="entrada__contenido">
@@ -109,8 +109,8 @@
         <article class="entrada">
           <div class="entrada__imagen">
             <picture>
-              <source srcset="img/blog3.webp" type="image/webp" />
-              <img src="img/blog3.jpg" alt="Entrada 1" />
+              <source srcset="img/blog3.webp" type="image/webp" width="auto" height="auto" />
+              <img src="img/blog3.jpg" alt="Entrada 1" width="auto" height="auto" />
             </picture>
           </div>
           <div class="entrada__contenido">
