--- a/entrada.html
+++ b/entrada.html
@@ -3,17 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preload" href="css/normailze.css" />
+    <link rel="preload" href="css/normailze.css" as="style" />
     <link rel="stylesheet" href="css/normailze.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
+      as="font"
+      crossorigin="crossorigin"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preload" href="css/style.css" />
+    <link rel="preload" href="css/styles.css" as="style" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="favicon.png" type="image/png" />
 
+   
     <title>Blog de Café</title>
   </head>
   <body>
