--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preload" href="css/style.css" as="style" />
+    <link rel="preload" href="css/styles.css" as="style" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="favicon.png" type="image/png" />
 
     <!-- Prefetch -->
     <link rel="prefetch" href="nosotros.html" as="document" />
